2001-04-26  Oliver Kiddle  <opk@zsh.org>

	* 14112: Completion/Base/Utility/.distfiles,
	Completion/Unix/Command/_pine, Completion/X/Command/.distfiles,
	Completion/X/Command/_vnc: new _vnc and use of new _guard in _pine

2001-04-26  Sven Wischnowsky  <wischnow@zsh.org>

	* 14107: Completion/compaudit, Completion/compinstall,
	Doc/Zsh/compsys.yo: handle sub-sub-directories of $_compdir as
	in the CVS-layout

	* 14105: Completion/Base/Utility/_arguments,
	Completion/Base/Utility/_guard,
	Completion/X/Utility/_x_arguments,
	Completion/X/Utility/_xt_arguments, Doc/Zsh/compsys.yo,
	Src/Zle/computil.c: rename -W option to -w, add new -W option
	which makes _arguments complete options even after options that
	get their argument in the same word; new _guard function for
	conditionally displaying messages

	* 14092: Completion/Base/Completer/_expand: make keep-prefix
	keep everything up to the first component with a parameter
	expansion, not only if that is at the beginning of the string

2001-04-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 14089: Src/Zle/computil.c: fix a sizeof() to strlen(). ahem.

2001-04-23  Bart Schaefer  <schaefer@brasslantern.com>

	* 14081: configure.in, Src/termcap.c, Src/terminfo.c: Fix linking
	yet again in the wake of 14077.  Disables echoti and the terminfo
	parameter on systems that have the old termcap, because otherwise
	the main zsh may be unnecessarily linked with curses even when the
	zsh/terminfo module is not in use.

	* 14080: Src/glob.c, Src/params.c, Src/subst.c, Src/zsh.h,
	Test/D06subscript.ztst: Optimize subscript parsing slightly by
	passing down an indication of whether the expression is in double
	quotes; fail noisily rather than silently on certain illegal
	associative array assignments; still more subscripting tests.

2001-04-23  Clint Adams <schizo@debian.org>

	* 14078: Doc/Zsh/mod_termcap.yo, Doc/Zsh/mod_terminfo.yo:
	Document $termcap, change reference to termcap/terminfo
	'strings' to 'values'.
